force-app/main/default/objects/Functional_Queue__c/fields/Associated_Application__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application__c</fullName>
    <label>Associated Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>