force-app/main/default/objects/Functional_Queue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the queue&apos;s purpose.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter a brief description of the queue&apos;s purpose.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>