force-app/main/default/objects/Functional_Queue__c/fields/FQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>FQ_External_Id__c</fullName>
    <description>Used for importing production data into sandboxes</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FQ External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>