force-app/main/default/objects/Functional_Queue__c/fields/Medical_Center__c.field-meta.xml
<CustomField>
    <fullName>Medical_Center__c</fullName>
    <description>The Suspense Management medical center that the functional queue relates to.</description>
    <label>Medical Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aleda E. Lutz Department of Veterans Affairs Medical Center - 655 - VISN10</fullName>
            </value>
            <value>
                <fullName>Alexandria VA Medical Center - 502 - VISN16</fullName>
            </value>
            <value>
                <fullName>Alvin C. York Veterans&apos; Administration Medical Center - 626A4 - VISN9</fullName>
            </value>
            <value>
                <fullName>American Lake VA Medical Center - 663A4 - VISN20</fullName>
            </value>
            <value>
                <fullName>Anchorage VA Medical Center - 463 - VISN20</fullName>
            </value>
            <value>
                <fullName>Ann Arbor VA Medical Center - 506 - VISN10</fullName>
            </value>
            <value>
                <fullName>Atlanta VA Medical Center - 508 - VISN7</fullName>
            </value>
            <value>
                <fullName>Audie L. Murphy Memorial Veterans&apos; Hospital - 671 - VISN17</fullName>
            </value>
            <value>
                <fullName>Augusta VA Medical Center-Uptown - 509A0 - VISN7</fullName>
            </value>
            <value>
                <fullName>Baltimore VA Medical Center - 512 - VISN5</fullName>
            </value>
            <value>
                <fullName>Batavia VA Medical Center - 528A4 - VISN2</fullName>
            </value>
            <value>
                <fullName>Bath VA Medical Center - 528A6 - VISN2</fullName>
            </value>
            <value>
                <fullName>Battle Creek VA Medical Center - 515 - VISN10</fullName>
            </value>
            <value>
                <fullName>Beckley VA Medical Center - 517 - VISN5</fullName>
            </value>
            <value>
                <fullName>Biloxi VA Medical Center - 520 - VISN16</fullName>
            </value>
            <value>
                <fullName>Birmingham VA Medical Center - 521 - VISN7</fullName>
            </value>
            <value>
                <fullName>Bob Stump Department of Veterans Affairs Medical Center - 649 - VISN22</fullName>
            </value>
            <value>
                <fullName>Boise VA Medical Center - 531 - VISN20</fullName>
            </value>
            <value>
                <fullName>Brockton VA Medical Center - 523A5 - VISN1</fullName>
            </value>
            <value>
                <fullName>Brooklyn VA Medical Center - 630A4 - VISN2</fullName>
            </value>
            <value>
                <fullName>Bruce W. Carter Department of Veterans Affairs Medical Center - 546 - VISN8</fullName>
            </value>
            <value>
                <fullName>Buffalo VA Medical Center - 528 - VISN2</fullName>
            </value>
            <value>
                <fullName>Butler VA Medical Center - 529 - VISN4</fullName>
            </value>
            <value>
                <fullName>Butler VA Medical Center - - VISN4</fullName>
            </value>
            <value>
                <fullName>C.W. Bill Young Department of Veterans Affairs Medical Center - 516 - VISN8</fullName>
            </value>
            <value>
                <fullName>Canandaigua VA Medical Center - 528A5 - VISN2</fullName>
            </value>
            <value>
                <fullName>Captain James A. Lovell Federal Health Care Center - 556 - VISN12</fullName>
            </value>
            <value>
                <fullName>Carl T. Hayden Veterans&apos; Administration Medical Center - 644 - VISN22</fullName>
            </value>
            <value>
                <fullName>Carl Vinson Veterans&apos; Administration Medical Center - 557 - VISN7</fullName>
            </value>
            <value>
                <fullName>Castle Point VA Medical Center - 620A4 - VISN2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>