force-app/main/default/objects/Functional_Queue__c/fields/Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Members__c</fullName>
    <description>Number of functional queue members associated to the functional queue.</description>
    <label>Number of Members</label>
    <summaryForeignKey>Functional_Queue_Member__c.Functional_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>