force-app/main/default/objects/Functional_Queue__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <description>Id of the corresponding Queue. This is autopopulated when a member is added to the functional queue.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Queue ID will auto-populate after members are added to the functional queue.</inlineHelpText>
    <label>Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>