force-app/main/default/objects/Functional_Queue__c/listViews/All_PSIP.listView-meta.xml
<ListView>
    <fullName>All_PSIP</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Members__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>Associated_Application__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All - PSIP</label>
    <sharedTo>
        <group>PSIP_All_Users</group>
    </sharedTo>
</ListView>